--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "react-swipe": "^6.0.4",
+    "swipe-js-iso": "^2.1.5",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
