--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "framer-motion": "^10.16.9",
+    "json-serve": "^0.1.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
